担当者insertの単体テスト

--- a/src/main/resources/templates/contents/sales.html
+++ b/src/main/resources/templates/contents/sales.html
@@ -80,7 +80,13 @@
 							<option>伊藤</option>
 							<option>髙橋</option>
 					</select></td>
-					<td><input type="text" class="form-control form-control-sm"></td>
+					<td><input type="text" class="form-control form-control-sm" list="keywords">
+						<datalist id="keywords">
+							<option>山本</option>
+							<option>田村</option>
+							<option>田中</option>
+						</datalist>
+					</td>
 					<td class="align-middle" ><input type="checkbox" class="position-static"> </td>
 				</tr>
 			</tbody>
