--- a/src/main/resources/templates/homeLayout.html
+++ b/src/main/resources/templates/homeLayout.html
@@ -40,6 +40,15 @@
 							class="dropdown-item" th:href="@{/salesList}">売上一覧</a>
 					</div>
 				</div>
+				<!--				<div class="dropdown">
+					<a id="sample"
+						class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">サンプル</a>
+					<div class="dropdown-menu" aria-labelledby="sample">
+						<a class="dropdown-item" th:href="@{/sales}">サンプル１</a> <a
+							class="dropdown-item" th:href="@{/salesList}">サンプル２</a>
+					</div>
+				</div>-->
 			</div>
 
 
