--- a/src/main/resources/templates/contents/shozoku/shozoku.html
+++ b/src/main/resources/templates/contents/shozoku/shozoku.html
@@ -12,24 +12,38 @@
 		</div>
 		<form th:object="${shozokuForm}" method="post"
 			th:action="@{/shozoku/update}">
-
-			<table class="table align-middel w-25">
-				<tbody>
-					<tr>
-						<td>id</td>
-						<td th:text="*{id}"></td>
-					</tr>
-					<tr>
-						<td>名前</td>
-						<td>
-							<input type="text" class="form-control" th:field="*{name}" />
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<input type="submit" class="btn btn-primary" value="更新"/>
+			<div th:if="${message}" class="alert alert-success">
+				<p th:text="${message}"></p>
+			</div>
+			<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+				<p th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect.</p>
+			</div>
+			<div class="w-25">
+				<table class="table align-middel">
+					<tbody>
+						<tr>
+							<td>id</td>
+							<td th:text="*{id}"></td>
+						</tr>
+						<tr>
+							<td>名前</td>
+							<td><input type="text" class="form-control"
+								th:field="*{name}" /></td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="d-flex justify-content-between">
+					<input type="button" class="btn btn-danger" value="削除" /> <input
+						type="submit" class="btn btn-primary" value="更新" />
+				</div>
+			</div>
 			<input type="hidden" th:field="*{id}" />
 		</form>
+		<script type="text/javascript" th:inline="javascript">
+			/*<![CDATA[*/
+
+			/*]]>*/
+		</script>
 	</div>
 </body>
 </html>
