#8 ファイルを追加

--- a/src/main/resources/templates/contents/sales/sales.html
+++ b/src/main/resources/templates/contents/sales/sales.html
@@ -6,7 +6,7 @@
 <title>売上登録画面</title>
 </head>
 <body>
-	<div th:fragment="sales_contents" class="h-100 w-100 uriage">
+	<div th:fragment="sales_contents" class="h-100 w-100">
 		<div class="content-title border-bottom">
 			<h3>売上登録</h3>
 		</div>
@@ -29,8 +29,8 @@
 					<th>下代</th>
 					<th>仕切日</th>
 					<th>仕切No</th>
-					<th>所属</th>
-					<th>担当者</th>
+					<!-- <th>所属</th> -->
+					<!-- <th>担当者</th> -->
 					<th>客名</th>
 					<th style="width: 2%;"></th>
 				</tr>
@@ -64,22 +64,22 @@
 					<td><input type="text" class="form-control form-control-sm"></td>
 					<td><input type="text" class="form-control form-control-sm date"></td>
 					<td><input type="text" class="form-control form-control-sm"></td>
-					<td><select class="form-control form-control-sm">
+					<!-- <td><select class="form-control form-control-sm">
 							<option></option>
 							<option>外商</option>
 							<option>店頭</option>
 							<option>売場1</option>
 							<option>売場2</option>
 							<option>売場3</option>
-					</select></td>
-					<td><select class="form-control form-control-sm">
+					</select></td> -->
+					<!-- <td><select class="form-control form-control-sm">
 							<option></option>
 							<option>佐藤</option>
 							<option>田中</option>
 							<option>鈴木</option>
 							<option>伊藤</option>
 							<option>髙橋</option>
-					</select></td>
+					</select></td> -->
 					<td><input type="text" class="form-control form-control-sm" list="keywords">
 						<datalist id="keywords">
 							<option>山本</option>
