--- a/src/main/resources/templates/contents/shozoku/shozokuList.html
+++ b/src/main/resources/templates/contents/shozoku/shozokuList.html
@@ -6,11 +6,11 @@
 <title>所属一覧</title>
 </head>
 <body>
-	<div th:fragment="shozokuList_contents" class="h-100 w-100 uriage">
+	<div th:fragment="shozokuList_contents" class="h-100 w-100">
 		<div class="content-title border-bottom">
 			<h3>所属一覧</h3>
 		</div>
-		<table class="table w-25">
+		<table class="table table-sm w-25">
 		<thead>
 			<tr>
 				<td></td>
