--- a/src/main/resources/templates/homeLayout.html
+++ b/src/main/resources/templates/homeLayout.html
@@ -66,6 +66,9 @@
 		</div>
 	</nav>
 	<div class="main d-flex align-items-center" style="margin-top: 50px;">
+		<div class="sidebar h-100">
+			サイドバー
+		</div>
 		<div class="content w-100 h-100">
 			<!-- メインコンテンツ -->
 			<div th:replace="__${contents}__"></div>
