--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,16 +42,23 @@ input:focus {
 	height: calc(100% - 50px);
 }
 
-.uriage {
+.sidebar {
+	width: 15%;
+	background-color: grey;
+}
+
+.content {
+	width: 85%;
 	padding: 10px;
+	overflow-y: auto;
 }
 
 .content-title {
 	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .table {
-	margin-top: 10px;
 	table-layout: fixed;
 }
 
