--- a/src/main/resources/templates/contents/shozoku/shozoku.html
+++ b/src/main/resources/templates/contents/shozoku/shozoku.html
@@ -8,7 +8,8 @@
 <body>
 	<div th:fragment="shozoku_contents" class="h-100 w-100">
 		<div class="content-title border-bottom">
-			<h3>所属詳細</h3>
+			<h3 th:if="__${displayMode == 'update'}__">所属詳細</h3>
+			<h3 th:if="__${displayMode == 'signup'}__">所属</h3>
 		</div>
 		<form th:object="${shozokuForm}" method="post"
 			th:action="@{/shozoku/update}">
@@ -16,7 +17,8 @@
 				<p th:text="${message}"></p>
 			</div>
 			<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-				<p th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect.</p>
+				<p th:each="err : ${#fields.errors('*')}" th:text="${err}">Input
+					is incorrect.</p>
 			</div>
 			<div class="w-25">
 				<table class="table table-sm align-middle">
@@ -33,8 +35,15 @@
 					</tbody>
 				</table>
 				<div class="d-flex justify-content-between">
-					<input type="button" class="btn btn-danger" value="削除" /> <input
-						type="submit" class="btn btn-primary" value="更新" />
+					<input type="button" class="btn" value="戻る"
+						onclick="history.back()" />
+					<div th:if="__${displayMode == 'update'}__" class="right-btn-group">
+						<input type="submit" class="btn btn-danger" value="削除" th:formaction="@{/shozoku/delete}" />
+						<input type="submit" class="btn btn-primary" value="更新" th:formaction="@{/shozoku/update}" />
+					</div>
+					<div th:if="__${displayMode == 'signup'}__" class="right-btn-group">
+						<input type="submit" class="btn btn-primary" value="登録" th:formaction="@{/shozoku/signup}" />
+					</div>
 				</div>
 			</div>
 			<input type="hidden" th:field="*{id}" />
