--- a/src/main/resources/templates/homeLayout.html
+++ b/src/main/resources/templates/homeLayout.html
@@ -29,7 +29,7 @@
 		<div class="container-fluid">
 			<div class="d-flex">
 				<div class="navbar-header">
-					<a class="navbar-brand" th:href="@{'/home'}">売上管理システム</a>
+					<a class="navbar-brand" th:href="@{'/salesList'}">売上管理システム</a>
 				</div>
 				<div class="dropdown">
 					<button type="button" id="uriage"
