#11 TantshaRepositoryのテストを実装・TantoshaControllerを実装shi,

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -67,6 +67,11 @@ input:focus {
 	color: #73879C;
 }
 
+.main .content .content-title h2 {
+	font-weight: bold;
+}
+
+
 .table {
 	table-layout: fixed;
 }
