--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,6 +71,13 @@ input:focus {
 	font-weight: bold;
 }
 
+.main .content .alert-success p {
+	font-weight: bold;
+}
+
+.main .content .alert-danger p {
+	font-weight: bold;
+}
 
 .table {
 	table-layout: fixed;
