--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -10,29 +10,37 @@
 		<div class="content-title border-bottom">
 			<h2>担当者一覧</h2>
 		</div>
+		<div class="signupBtn">
+			<input type="button" class="btn btn-success" value="新規登録"
+				th:onclick="@{location.href='/tantosha/signup'}" />
+		</div>
+		<div th:if="${message}" class="alert alert-success">
+			<p th:text="${message}"></p>
+		</div>
 		<table class="table table-sm w-50">
-		<thead>
-			<tr>
-				<td></td>
-				<td>担当者名</td>
-				<td>所属</td>
-				<td>権限</td>
-				<td></td>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="tantosha : ${tantoshaList}">
-				<td th:text="${tantosha.id}"></td>
-				<td th:text="${tantosha.name}"></td>
-				<td th:text="${tantosha.shozoku.name}"></td>
-				<th:block th:switch="${tantosha.role}">
-					<td th:case="ROLE_ADMIN" th:text="管理者"></td>
-					<td th:case="ROLE_GENERAL" th:text="一般"></td>
-				</th:block>
-				<td><a class="btn btn-sm btn-primary" th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
-			</tr>
-		</tbody>
-	</table>
+			<thead>
+				<tr>
+					<td></td>
+					<td>担当者名</td>
+					<td>所属</td>
+					<td>権限</td>
+					<td></td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="tantosha : ${tantoshaList}">
+					<td th:text="${tantosha.id}"></td>
+					<td th:text="${tantosha.name}"></td>
+					<td th:text="${tantosha.shozoku.name}"></td>
+					<th:block th:switch="${tantosha.role}">
+						<td th:case="ROLE_ADMIN" th:text="管理者"></td>
+						<td th:case="ROLE_GENERAL" th:text="一般"></td>
+					</th:block>
+					<td><a class="btn btn-sm btn-primary"
+						th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </body>
 </html>
