#15 顧客テーブル関連のクラスを追加

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -87,6 +87,11 @@ input:focus {
 	padding: 0.25rem;
 }
 
+/* ページネーション */
+.pagination li a {
+	color:#2A3F54;
+}
+
 #addRow {
 	margin-left: auto;
 	margin-right: 5px;
