--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -17,30 +17,46 @@
 		<div th:if="${message}" class="alert alert-success">
 			<p th:text="${message}"></p>
 		</div>
-		<table class="table table-sm w-50">
-			<thead>
-				<tr>
-					<td></td>
-					<td>担当者名</td>
-					<td>所属</td>
-					<td>権限</td>
-					<td></td>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="tantosha : ${tantoshaList}">
-					<td th:text="${tantosha.id}"></td>
-					<td th:text="${tantosha.name}"></td>
-					<td th:text="${tantosha.shozoku.name}"></td>
-					<th:block th:switch="${tantosha.role}">
-						<td th:case="ROLE_ADMIN" th:text="管理者"></td>
-						<td th:case="ROLE_GENERAL" th:text="一般"></td>
-					</th:block>
-					<td><a class="btn btn-sm btn-primary"
-						th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="w-50">
+			<table class="table table-sm text-center">
+				<thead>
+					<tr>
+						<td></td>
+						<td>担当者名</td>
+						<td>所属</td>
+						<td>権限</td>
+						<td></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="tantosha : ${tantoshaList}">
+						<td th:text="${tantosha.id}"></td>
+						<td th:text="${tantosha.name}"></td>
+						<td th:text="${tantosha.shozoku.name}"></td>
+						<th:block th:switch="${tantosha.role}">
+							<td th:case="ROLE_ADMIN" th:text="管理者"></td>
+							<td th:case="ROLE_GENERAL" th:text="一般"></td>
+						</th:block>
+						<td><a class="btn btn-sm btn-primary"
+							th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
+					</tr>
+				</tbody>
+			</table>
+			<nav aria-label="Page navigation">
+				<ul class="pagination justify-content-center">
+					<li class="page-item disabled" th:classappend="${page.first} ? 'disabled'"><a class="page-link" href="#"
+						aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
+					</a></li>
+					<li class="page-item active"><a class="page-link" href="#">1<span
+							class="sr-only">(current)</span></a></li>
+					<li class="page-item"><a class="page-link" href="#">2</a></li>
+					<li class="page-item"><a class="page-link" href="#">3</a></li>
+					<li class="page-item" th:classappend="${page.last} ? 'disabled'"><a class="page-link" href="#"
+						aria-label="Next"> <span aria-hidden="true">&raquo;</span>
+					</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
 </body>
 </html>
