--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-<meta charset="UTF-8">
-<title>担当者一覧</title>
-</head>
-<body>
-	<div th:fragment="tantoshaList_contents" class="h-100 w-100">
-		<div class="content-title border-bottom">
-			<h2>担当者一覧</h2>
-		</div>
-		<div class="signupBtn">
-			<input type="button" class="btn btn-success" value="新規登録"
-				th:onclick="@{location.href='/tantosha/signup'}" />
-		</div>
-		<div th:if="${message}" class="alert alert-success">
-			<p th:text="${message}"></p>
-		</div>
-		<div class="w-50">
-			<table class="table table-sm text-center">
-				<thead>
-					<tr>
-						<td></td>
-						<td>担当者名</td>
-						<td>所属</td>
-						<td>権限</td>
-						<td></td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="tantosha : ${tantoshaList}">
-						<td th:text="${tantosha.id}"></td>
-						<td th:text="${tantosha.name}"></td>
-						<td th:text="${tantosha.shozoku.name}"></td>
-						<th:block th:switch="${tantosha.role}">
-							<td th:case="ROLE_ADMIN" th:text="管理者"></td>
-							<td th:case="ROLE_GENERAL" th:text="一般"></td>
-						</th:block>
-						<td><a class="btn btn-sm btn-primary"
-							th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
-					</tr>
-				</tbody>
-			</table>
+<html
+  lang="ja"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <title>担当者一覧</title>
+  </head>
+  <body>
+    <div th:fragment="tantoshaList_contents" class="h-100 w-100">
+      <div id="">
+        <div class="content-title border-bottom">
+          <h2>担当者一覧</h2>
+          <!-- <content-title></content-title> -->
+        </div>
+        <div class="signupBtn">
+          <input
+            type="button"
+            class="btn btn-success"
+            value="新規登録"
+            th:onclick="@{location.href='/tantosha/signup'}"
+          />
+        </div>
+        <div th:if="${message}" class="alert alert-success">
+          <p th:text="${message}"></p>
+        </div>
+        <div class="w-50">
+        <div id="app">
+          <table class="table table-sm text-center">
+            <thead>
+              <tr>
+                <td></td>
+                <td>担当者名</td>
+                <td>所属</td>
+                <td>権限</td>
+                <td></td>
+              </tr>
+            </thead>
+            <tbody>
+
+              <tantosha-list></tantosha-list>
+
+              <!--/*
+              <tr th:each="tantosha : ${tantoshaList}">
+                <td th:text="${tantosha.id}"></td>
+                <td th:text="${tantosha.name}"></td>
+                <td th:text="${tantosha.shozoku.name}"></td>
+                <th:block th:switch="${tantosha.role}">
+                  <td th:case="ROLE_ADMIN" th:text="管理者"></td>
+                  <td th:case="ROLE_GENERAL" th:text="一般"></td>
+                </th:block>
+                <td>
+                  <a
+                    class="btn btn-sm btn-primary"
+                    th:href="@{'/tantosha/detail/' + ${tantosha.id}}"
+                    >詳細</a
+                  >
+                </td>
+              </tr>
+              */-->
+            </tbody>
+          </table>
+          <!--/*
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center">
 					<li class="page-item disabled" th:classappend="${page.first} ? 'disabled'"><a class="page-link" href="#"
@@ -56,7 +77,63 @@
 					</a></li>
 				</ul>
 			</nav>
-		</div>
-	</div>
-</body>
+			 */-->
+        </div>
+        </div>
+      </div>
+      <script type="text/x-template" id="tantoshaList">
+        <div v-for="tantosha in tantoshaList" :key="tantosha.id">
+          <h2>{{ tantosha.name }}</h2>
+        </div>
+      </script>
+
+      <script>
+        /* Vue.component('content-title', {
+        	template: '<h2>{{contents}}</h2>',
+        	data: function(){
+        		return {contents: '担当者一覧'}
+        	}
+        }) */
+
+          Vue.component('tantosha-list', {
+            template: '#tantoshaList',
+            data: function(){
+              return {
+                tantoshaList: function(){
+                  return []
+                },
+                error: null
+              }
+            },
+
+            created: function () {
+                  this.fetchData()
+            },
+
+            methods: {
+                fetchData: function () {
+
+                    getTantoshaList((function (err, tantoshaList) {
+
+                        if (err) {
+                            this.error = err.toString()
+                        } else {
+                            this.tantoshaList = tantoshaList
+                        }
+                    }).bind(this))
+                }
+            }
+          })
+
+          var getTantoshaList = function(callback){
+            axios.get('/tantosha/getTantoshaList')
+                      .then(function (res) {
+                          callback(null, res.data)
+                      })
+          }
+
+        new Vue({ el: '#app' })
+      </script>
+    </div>
+  </body>
 </html>
