--- a/src/main/resources/templates/contents/customer/customerList.html
+++ b/src/main/resources/templates/contents/customer/customerList.html
@@ -83,6 +83,14 @@
 			</nav>
 			 */-->
 		</div>
+    <div id="app"></div>
+    <script>
+      new Vue({
+        template: '<p>{{msg}}</p>',
+        data: {msg: 'hello world!'}
+      }).$mount('#app')
+
+    </script>
 	</div>
 </body>
 </html>
