--- a/src/main/resources/templates/homeLayout.html
+++ b/src/main/resources/templates/homeLayout.html
@@ -17,6 +17,10 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/i18n/jquery.ui.datepicker-ja.min.js"></script>
 
+<!-- Vue.js -->
+<script src="https://unpkg.com/vue@2.5.17"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 <link th:href="@{/css/style.css}" rel="stylesheet" />
 
 <title>売上管理システム</title>
@@ -75,5 +79,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" th:src="@{/js/jewelry.js}"></script>
+
+
 </body>
 </html>
