--- a/src/main/resources/templates/contents/shozoku/shozokuList.html
+++ b/src/main/resources/templates/contents/shozoku/shozokuList.html
@@ -11,28 +11,72 @@
 			<h2>所属一覧</h2>
 		</div>
 		<div class="signupBtn">
-			<input type="button" class="btn btn-success" value="新規登録" th:onclick="@{location.href='/shozoku/signup'}" />
+			<input type="button" class="btn btn-success" value="新規登録"
+				th:onclick="@{location.href='/shozoku/signup'}" />
 		</div>
 		<div th:if="${message}" class="alert alert-success">
 			<p th:text="${message}"></p>
 		</div>
-		<table class="table table-sm w-25">
-			<thead>
-				<tr>
-					<td></td>
-					<td>所属名</td>
-					<td></td>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="shozoku : ${shozokuList}">
-					<td th:text="${shozoku.id}"></td>
-					<td th:text="${shozoku.name}"></td>
-					<td><a class="btn btn-sm btn-primary"
-						th:href="@{'/shozoku/detail/' + ${shozoku.id}}">詳細</a></td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="w-25">
+			<table class="table table-sm">
+				<thead>
+					<tr>
+						<td></td>
+						<td>所属名</td>
+						<td></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="shozoku : ${shozokuList}">
+						<td th:text="${shozoku.id}"></td>
+						<td th:text="${shozoku.name}"></td>
+						<td><a class="btn btn-sm btn-primary"
+							th:href="@{'/shozoku/detail/' + ${shozoku.id}}">詳細</a></td>
+					</tr>
+				</tbody>
+			</table>
+			<nav aria-label="Page navigation">
+				<ul class="pagination justify-content-center">
+					<!--/* 前ページ */-->
+					<li class="page-item" th:classappend="${page.first} ? 'disabled'"><a
+						class="page-link" th:href="@{''(page=${page.number - 1})}" aria-label="Previous"> <span
+							aria-hidden="true">&laquo;</span>
+					</a></li>
+					<!--/* 最初のページ */-->
+					<li th:if="${page.number gt 2}" class="page-item"><a
+						th:href="@{''(page=0)}" class="page-link">1</a></li>
+
+					<!--/* … */-->
+					<li th:if="${page.number gt 3}" class="page-item disabled"><a
+						href="#" class="page-link">…</a></li>
+
+					<th:block
+						th:each="i : ${ #numbers.sequence(page.number - 2, page.number + 2) }">
+						<li th:if="${i ge 0 and i lt page.totalPages}" class="page-item"
+							th:classappend="${i eq page.number} ? 'active'"><a
+							th:href="@{''(page=${i})}" th:text="${i + 1}" class="page-link"></a>
+						</li>
+					</th:block>
+
+					<!--/* … */-->
+					<li th:if="${page.totalPages gt (page.number + 4)}"
+						class="page-item disabled"><a href="#" class="page-link">…</a>
+					</li>
+
+					<!--/* 最後のページ */-->
+					<li th:if="${page.totalPages gt (page.number + 3)}"
+						class="page-item"><a
+						th:href="@{''(page=${page.totalPages - 1})}"
+						th:text="${page.totalPages}" class="page-link"></a></li>
+
+					<!--/* 次ページ */-->
+					<li class="page-item" th:classappend="${page.last} ? 'disabled'"><a
+						class="page-link" th:href="@{''(page=${page.number + 1})}" aria-label="Next"> <span
+							aria-hidden="true">&raquo;</span>
+					</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
 </body>
 </html>
