--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -42,20 +42,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<nav aria-label="Page navigation">
-				<ul class="pagination justify-content-center">
-					<li class="page-item disabled" th:classappend="${page.first} ? 'disabled'"><a class="page-link" href="#"
-						aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
-					</a></li>
-					<li class="page-item active"><a class="page-link" href="#">1<span
-							class="sr-only">(current)</span></a></li>
-					<li class="page-item"><a class="page-link" href="#">2</a></li>
-					<li class="page-item"><a class="page-link" href="#">3</a></li>
-					<li class="page-item" th:classappend="${page.last} ? 'disabled'"><a class="page-link" href="#"
-						aria-label="Next"> <span aria-hidden="true">&raquo;</span>
-					</a></li>
-				</ul>
-			</nav>
+			<div th:replace="contents/component/pagenation :: page_contents"></div>
 		</div>
 	</div>
 </body>
