--- a/src/main/resources/templates/contents/customer/customerList.html
+++ b/src/main/resources/templates/contents/customer/customerList.html
@@ -66,6 +66,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<div th:replace="contents/component/pagenation :: page_contents"></div>
 			<!--/*
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center">
