--- a/src/main/resources/templates/contents/tantosha/tantoshaList.html
+++ b/src/main/resources/templates/contents/tantosha/tantoshaList.html
@@ -37,7 +37,7 @@
 							<td th:case="ROLE_ADMIN" th:text="管理者"></td>
 							<td th:case="ROLE_GENERAL" th:text="一般"></td>
 						</th:block>
-						<td><a class="btn btn-sm btn-primary"
+						<td><a class="btn btn-sm btn-secondary"
 							th:href="@{'/tantosha/detail/' + ${tantosha.id}}">詳細</a></td>
 					</tr>
 				</tbody>
