--- a/src/main/resources/templates/contents/customer/customerList.html
+++ b/src/main/resources/templates/contents/customer/customerList.html
@@ -61,28 +61,12 @@
 							</th:block>
 						</td>
 						<td th:text="${customer.tantosha.name}"></td>
-						<td><a class="btn btn-sm btn-primary"
+						<td><a class="btn btn-sm btn-secondary"
 							th:href="@{'/customer/detail/' + ${customer.id}}">詳細</a></td>
 					</tr>
 				</tbody>
 			</table>
 			<div th:replace="contents/component/pagenation :: page_contents"></div>
-			<!--/*
-			<nav aria-label="Page navigation">
-				<ul class="pagination justify-content-center">
-					<li class="page-item disabled" th:classappend="${page.first} ? 'disabled'"><a class="page-link" href="#"
-						aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
-					</a></li>
-					<li class="page-item active"><a class="page-link" href="#">1<span
-							class="sr-only">(current)</span></a></li>
-					<li class="page-item"><a class="page-link" href="#">2</a></li>
-					<li class="page-item"><a class="page-link" href="#">3</a></li>
-					<li class="page-item" th:classappend="${page.last} ? 'disabled'"><a class="page-link" href="#"
-						aria-label="Next"> <span aria-hidden="true">&raquo;</span>
-					</a></li>
-				</ul>
-			</nav>
-			 */-->
 		</div>
 	</div>
 </body>
