--- a/src/main/resources/templates/contents/customer/customer.html
+++ b/src/main/resources/templates/contents/customer/customer.html
@@ -6,13 +6,13 @@
 <title>顧客</title>
 </head>
 <body>
-	<div th:fragment="tantosha_contents" class="h-100 w-100">
+	<div th:fragment="customer_contents" class="h-100 w-100">
 		<div class="content-title border-bottom">
-			<h2 th:if="__${displayMode == 'update'}__">担当者詳細</h2>
-			<h2 th:if="__${displayMode == 'signup'}__">担当者登録</h2>
+			<h2 th:if="__${displayMode == 'update'}__">顧客詳細</h2>
+			<h2 th:if="__${displayMode == 'signup'}__">顧客登録</h2>
 		</div>
-		<form th:object="${tantoshaForm}" method="post"
-			th:action="@{/tantosha/update}">
+		<form th:object="${customerForm}" method="post"
+			th:action="@{/customer/update}">
 			<div th:if="${message}" class="alert alert-success">
 				<p th:text="${message}"></p>
 			</div>
@@ -33,30 +33,7 @@
 							<td><input type="text" autocomplete="off"
 								class="form-control" th:field="*{name}" /></td>
 						</tr>
-						<tr>
-							<td>所属</td>
-							<td><select class="form-control" name="shozoku.id">
-									<option th:each="shozoku : ${shozokuList}"
-										th:value="${shozoku.id}"
-										th:selected="${shozoku.id} == *{shozoku.id}" th:inline="text">[[${shozoku.name}]]</option>
-							</select></td>
-						</tr>
-						<tr>
-							<td>権限</td>
-							<td>
-								<div class="form-check form-check-inline">
-									<label class="radio-inline btnLabel" for="role1"> <input
-										type="radio" th:field="*{role}" value="ROLE_GENERAL">一般
-									</label>
-								</div>
-								<div class="form-check form-check-inline">
-									<label class="radio-inline btnLabel" for="role2"> <input
-										type="radio" class="btn-check" th:field="*{role}"
-										value="ROLE_ADMIN">管理者
-									</label>
-								</div>
-							</td>
-						</tr>
+
 					</tbody>
 				</table>
 				<div class="d-flex justify-content-between">
@@ -64,13 +41,13 @@
 						onclick="history.back()" />
 					<div th:if="__${displayMode == 'update'}__" class="right-btn-group">
 						<input type="submit" class="btn btn-danger" value="削除"
-							th:formaction="@{/tantosha/delete}" /> <input type="submit"
+							th:formaction="@{/customer/delete}" /> <input type="submit"
 							class="btn btn-primary" value="更新"
-							th:formaction="@{/tantosha/update}" />
+							th:formaction="@{/customer/update}" />
 					</div>
 					<div th:if="__${displayMode == 'signup'}__" class="right-btn-group">
 						<input type="submit" class="btn btn-primary" value="登録"
-							th:formaction="@{/tantosha/signup}" />
+							th:formaction="@{/customer/signup}" />
 					</div>
 				</div>
 			</div>
