--- a/src/main/resources/templates/contents/shozoku/shozoku.html
+++ b/src/main/resources/templates/contents/shozoku/shozoku.html
@@ -36,7 +36,7 @@
 					</tbody>
 				</table>
 				<div class="d-flex justify-content-between">
-					<input type="button" class="btn" value="一覧"
+					<input type="button" class="btn" value="一覧画面へ"
 						th:onclick="@{location.href='/shozoku/list'}" />
 					<div th:if="__${displayMode == 'update'}__" class="right-btn-group">
 						<input type="submit" class="btn btn-danger" value="削除" th:formaction="@{/shozoku/delete}" />
